--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-10  Miguel Figueiredo <elmig@debianpt.org>
+
+	* pt.po: Updated to 731t
+
 2006-04-10  Christian Perrier  <bubulle@debian.org>
 
 	* fr.po: Updated to 731t
