--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-10  Miguel Figueiredo <elmig@debianpt.org>
+
+	* pt.po: Updated Portuguese translation to 731t.
+
 2006-04-10  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Bump version to 1.13.19~.
