Add -follow (back) to find call in dpkg-scanpackages. Closes: #358011

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-04-11  Frank Lichtenheld  <djpig@debian.org>
+
+	* scripts/dpkg-scanpackages.pl: Add -follow
+	to @find_args. This was lost in a previous patch
+	apparently.
+
 2006-04-10  Miguel Figueiredo <elmig@debianpt.org>
 
 	* pt.po: Updated Portuguese translation to 731t.
