--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
 dpkg (1.13.19~) UNRELEASED; urgency=low
 
+  [ Frank Lichtenheld ]
+  * Add -follow (back) to find call in dpkg-scanpackages.
+    Closes: #358011
+  
   [ Updated dpkg Translations ]
   * French (Christian Perrier)
   * Galician (Jacobo Tarrio)
