--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ dpkg (1.13.19~) UNRELEASED; urgency=low
   [ Frank Lichtenheld ]
   * Add -follow (back) to find call in dpkg-scanpackages.
     Closes: #358011
+  * Fix error in archive.c that lead to a infinite loop when
+    installing files with long, non-ASCII filenames in
+    certain locales. Closes: #346436
   
   [ Updated dpkg Translations ]
   * French (Christian Perrier)
