updtated Romanian dpkg translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ dpkg (1.13.19~) UNRELEASED; urgency=low
   [ Updated dpkg Translations ]
   * French (Christian Perrier).
   * Galician (Jacobo Tarrio).
+  * Romanian (Eddy Petrişor)
 
  -- Jacobo Tarrio <jtarrio@debian.org>  Mon, 10 Apr 2006 16:40:46 +0200
 
