--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-04-11  Eddy Petrişor  <eddy.petrisor@gmail.com>
+
+	* ro.po: Updated to 731t
+	* ro.po: Unified quotation marks; using Romanian quotes
+
 2006-04-10  Miguel Figueiredo <elmig@debianpt.org>
 
 	* pt.po: Updated to 731t
