pt.po: Mark a broken string as fuzzy and give the translator a hint where it is broken.

--- a/po/pt.po
+++ b/po/pt.po
@@ -2202,7 +2202,7 @@ msgstr ""
 "Veja %s --license para detalhes de copyright e licença.\n"
 
 #: src/main.c:57
-#, c-format
+#, fuzzy, c-format
 msgid ""
 "Usage: %s [<option> ...] <command>\n"
 "\n"
@@ -2273,7 +2273,7 @@ msgid ""
 "\n"
 "Use `dselect' or `aptitude' for user-friendly package management.\n"
 msgstr ""
-"Utilização: \n"
+"Utilização: %s [<option> ...] <command>\n"
 "  -i|--install      <.deb nome ficheiro> ... | -R|--recursive "
 "<dir> ...\n"
 "  --unpack          <.deb nome ficheiro> ... | -R|--recursive "
