--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-04-11  Frank Lichtenheld  <djpig@debian.org>
+
+	* pt.po: Mark a broken string as fuzzy and give
+	the translator a hint where it is broken.
+
 2006-04-11  Eddy Petrişor  <eddy.petrisor@gmail.com>
 
 	* ro.po: Updated to 731t
