Fix unmatched "<" or ">", which avoided the French dpkg-statoverride.8 and Russian dpkg.1 manpages to be generated.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -5,6 +5,8 @@
 	* ru/Makefile.am: Specify that the Russian manpages must be
 	generated in the KOI8-R charset and that the Russian addenda are
 	already encoded in KOI8-R.
+	* man/fr/dpkg-statoverride.8.fr.po: Fix an unmatched ">" or "<".
+	* man/ru/dpkg.1.ru.po: Likewise.
 
 2006-04-10  Guillem Jover  <guillem@debian.org>
 
