--- a/man/fr/dpkg-statoverride.8.fr.po
+++ b/man/fr/dpkg-statoverride.8.fr.po
@@ -61,7 +61,7 @@ msgid ""
 "E<lt>modeE<gt> E<lt>fileE<gt>>"
 msgstr ""
 "B<dpkg-statoverride> [I<options>] B<--add>I< E<lt>utilisateurE<gt> "
-"E<lt>groupeE<gt> E<lt>modeE<gt> I<E<lt>fichierE<gt>>"
+"E<lt>groupeE<gt> E<lt>modeE<gt> E<lt>fichierE<gt>>"
 
 # type: Plain text
 #: dpkg-statoverride.8:13
