--- a/man/ru/dpkg.1.ru.po
+++ b/man/ru/dpkg.1.ru.po
@@ -830,7 +830,7 @@ msgid ""
 "B<dpkg -p> | B<--print-avail> I<package>\n"
 "    Display details about I<package>, as found in I</var/lib/dpkg/available>.\n"
 msgstr ""
-"B<dpkg -l> | B<--list > I<E<шаблон имени пакета> ...\n"
+"B<dpkg -l> | B<--list > I<шаблон имени пакета> ...\n"
 "    Показывает пакеты, соответствующие данному шаблону.\n"
 "B<dpkg -s> | B<--status > I<имя пакета> ...\n"
 "    Сообщает о состоянии указанного пакета.\n"
