--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-11  Eddy Petrişor <eddy.petrisor@gmail.com>
+
+	* ro.po: Updated to 286t
+
 2006-04-10  Guillem Jover  <guillem@debian.org>
 
 	* dselect.pot: Regenerated.
