Various updates to Swedish.

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ dpkg (1.13.19~) UNRELEASED; urgency=low
   * French (Christian Perrier).
   * Galician (Jacobo Tarrio).
   * Romanian (Eddy Petrişor)
+  * Swedish (Peter Karlsson).
 
   [ Updated dselect Translations ]
   * Romanian (Eddy Petrişor)
