--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-13  Peter Karlsson <peterk@debian.org>
+
+	* sv.po: Various updates.
+
 2006-04-11  Frank Lichtenheld  <djpig@debian.org>
 
 	* pt.po: Mark a broken string as fuzzy and give
