--- a/debian/changelog
+++ b/debian/changelog
@@ -10,7 +10,8 @@ dpkg (1.13.19~) UNRELEASED; urgency=low
   [ Updated dpkg Translations ]
   * French (Christian Perrier).
   * Galician (Jacobo Tarrio).
-  * Romanian (Eddy Petrişor)
+  * Romanian (Eddy Petrişor).
+  * Dutch (Bart Cornelis).
   * Swedish (Peter Karlsson).
 
   [ Updated dselect Translations ]
@@ -19,7 +20,7 @@ dpkg (1.13.19~) UNRELEASED; urgency=low
   [ Nicolas Francois ]
   * Generate the Russian man pages in the KOI8-R charset. Closes: #361987
 
- -- Jacobo Tarrio <jtarrio@debian.org>  Mon, 10 Apr 2006 16:40:46 +0200
+ -- Bart Cornelis (cobaco) <cobaco@linux.be>  Thu, 13 Apr 2006 12:51:15 +0200
 
 dpkg (1.13.18) unstable; urgency=low
 
