--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-13 Bart Cornelis <cobaco@linux.be>
+
+	* nl.po: Updated translation
+
 2006-04-13  Peter Karlsson <peterk@debian.org>
 
 	* sv.po: Various updates.
