--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,7 @@ dpkg (1.13.19~) UNRELEASED; urgency=low
 
   [ Nicolas Francois ]
   * Generate the Russian man pages in the KOI8-R charset. Closes: #361987
+  * Document the shlibs.local format in dpkg-source(1). CLoses: #316485
 
  -- Bart Cornelis (cobaco) <cobaco@linux.be>  Thu, 13 Apr 2006 12:51:15 +0200
 
