[INTL:da] Update Danish translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ dpkg (1.13.19~) UNRELEASED; urgency=low
   * Romanian (Eddy Petrişor).
   * Dutch (Bart Cornelis).
   * Swedish (Peter Karlsson).
+  * Danish (Claus Hindsgaul). Closes: #362317
 
   [ Updated dselect Translations ]
   * Romanian (Eddy Petrişor)
