--- a/po/da.po
+++ b/po/da.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: dpkg_1.10.19_da\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-04-10 06:33+0300\n"
-"PO-Revision-Date: 2006-03-08 09:14+0100\n"
+"PO-Revision-Date: 2006-04-12 14:03+0200\n"
 "Last-Translator: Claus Hindsgaul <claus.hindsgaul@gmail.com>\n"
 "Language-Team: Danish\n"
 "MIME-Version: 1.0\n"
@@ -156,8 +156,7 @@ msgstr ""
 
 #: lib/dbmodify.c:63
 #, c-format
-msgid ""
-"updates directory contains files with different length names (both %d and %d)"
+msgid "updates directory contains files with different length names (both %d and %d)"
 msgstr ""
 "opdateringsmappen indeholder filer med forskellige navnelængder (både %d og %"
 "d)"
@@ -281,8 +280,7 @@ msgstr "kunne ikke lukke '%.250s' efter skrivning af %s-information"
 #: lib/dump.c:323
 #, c-format
 msgid "failed to link `%.250s' to `%.250s' for backup of %s info"
-msgstr ""
-"kunne ikke lænke '%.250s' til '%.250s' som sikkerhedskopiering af %s-info"
+msgstr "kunne ikke lænke '%.250s' til '%.250s' som sikkerhedskopiering af %s-info"
 
 #: lib/dump.c:326
 #, c-format
@@ -423,10 +421,8 @@ msgstr "root- eller null-mappen er nævnt i konfigurationsfil"
 
 #: lib/fields.c:337
 #, c-format
-msgid ""
-"`%s' field, missing package name, or garbage where package name expected"
-msgstr ""
-"'%s'-felt, manglende pakkenavn eller skrammel, hvor pakkenavnet var forventet"
+msgid "`%s' field, missing package name, or garbage where package name expected"
+msgstr "'%s'-felt, manglende pakkenavn eller skrammel, hvor pakkenavnet var forventet"
 
 #: lib/fields.c:340
 #, c-format
@@ -763,14 +759,12 @@ msgstr "feltnavn '%.*s' skal efterfølges af et kolon"
 #: lib/parse.c:169
 #, c-format
 msgid "EOF before value of field `%.*s' (missing final newline)"
-msgstr ""
-"Slut-på-fil før værdien af felt '%.*s' (afsluttende linjeskift mangler)"
+msgstr "Slut-på-fil før værdien af felt '%.*s' (afsluttende linjeskift mangler)"
 
 #: lib/parse.c:173
 #, c-format
 msgid "MSDOS EOF char in value of field `%.*s' (missing newline?)"
-msgstr ""
-"MSDOS-slut-på-fil-tegn i værdien for felt '%.*s' (manglende linjeskift?)"
+msgstr "MSDOS-slut-på-fil-tegn i værdien for felt '%.*s' (manglende linjeskift?)"
 
 #: lib/parse.c:187
 #, c-format
@@ -957,8 +951,7 @@ msgstr ""
 #: src/archives.c:407
 #, c-format
 msgid "unable to stat restored `%.255s' before installing another version"
-msgstr ""
-"kunne ikke finde genskabt '%.255s', inden jeg installerede en anden version"
+msgstr "kunne ikke finde genskabt '%.255s', inden jeg installerede en anden version"
 
 #: src/archives.c:439
 #, c-format
@@ -977,8 +970,7 @@ msgstr "Erstattet af filer i den installerede pakke %s ...\n"
 
 #: src/archives.c:508
 #, c-format
-msgid ""
-"trying to overwrite directory `%.250s' in package %.250s with nondirectory"
+msgid "trying to overwrite directory `%.250s' in package %.250s with nondirectory"
 msgstr "forsøger at overskrive mappen '%.250s' i pakken %.250s med ikke-mappe"
 
 #: src/archives.c:518
@@ -1215,8 +1207,7 @@ msgstr "%s - advarsel: nedgraderer %.250s fra %.250s til %.250s.\n"
 #: src/archives.c:1129
 #, c-format
 msgid "Will not downgrade %.250s from version %.250s to %.250s, skipping.\n"
-msgstr ""
-"Vil ikke nedgradere %.250s fra version %.250s til %.250s, springer over.\n"
+msgstr "Vil ikke nedgradere %.250s fra version %.250s til %.250s, springer over.\n"
 
 #: src/cleanup.c:83
 #, c-format
@@ -1321,8 +1312,7 @@ msgstr ""
 #: src/configure.c:232
 #, c-format
 msgid "dpkg: %s: warning - failed to remove old backup `%.250s': %s\n"
-msgstr ""
-"dpkg: %s: advarsel - kunne ikke slette gammel sikkerhedskopi '%.250s': %s\n"
+msgstr "dpkg: %s: advarsel - kunne ikke slette gammel sikkerhedskopi '%.250s': %s\n"
 
 #: src/configure.c:240
 #, c-format
@@ -1344,8 +1334,7 @@ msgstr ""
 #: src/configure.c:261
 #, c-format
 msgid "dpkg: %s: warning - failed to remove `%.250s' (before overwrite): %s\n"
-msgstr ""
-"dpkg: %s: advarsel - kunne ikke slette '%.250s' (inden overskrivning): %s\n"
+msgstr "dpkg: %s: advarsel - kunne ikke slette '%.250s' (inden overskrivning): %s\n"
 
 #: src/configure.c:266
 #, c-format
@@ -1415,8 +1404,7 @@ msgstr "md5hash"
 #: src/configure.c:416
 #, c-format
 msgid "dpkg: %s: warning - unable to open conffile %s for hash: %s\n"
-msgstr ""
-"dpkg: %s: advarsel - kunne ikke åbne konfigurationsfil %s til hashning: %s\n"
+msgstr "dpkg: %s: advarsel - kunne ikke åbne konfigurationsfil %s til hashning: %s\n"
 
 #: src/configure.c:434
 #, c-format
@@ -1426,8 +1414,7 @@ msgstr "kunne ikke ændre ejerskab af ny medsendt konfigurationsfil '%.250s'"
 #: src/configure.c:437
 #, c-format
 msgid "unable to set mode of new dist conffile `%.250s'"
-msgstr ""
-"kunne ikke ændre rettighedsflag for medsendt konfigurationsfil '%.250s'"
+msgstr "kunne ikke ændre rettighedsflag for medsendt konfigurationsfil '%.250s'"
 
 #: src/configure.c:467
 #, c-format
@@ -1449,8 +1436,7 @@ msgstr "kunne ikke udføre skal (%.250s)"
 
 #: src/configure.c:517
 msgid "Don't forget to foreground (`fg') this process when you're done !\n"
-msgstr ""
-"Glem ikke at sætte denne proces i forgrunden ('fg'), når du er færdig!\n"
+msgstr "Glem ikke at sætte denne proces i forgrunden ('fg'), når du er færdig!\n"
 
 #: src/configure.c:556
 #, c-format
@@ -1573,8 +1559,7 @@ msgstr "[ingen forvalgt handling]"
 
 #: src/configure.c:626
 msgid "error writing to stderr, discovered before conffile prompt"
-msgstr ""
-"fejl ved skrivning til standardfejl, opdaget inden konfigurationsfil-prompt"
+msgstr "fejl ved skrivning til standardfejl, opdaget inden konfigurationsfil-prompt"
 
 #: src/configure.c:633
 msgid "read error on stdin at conffile prompt"
@@ -1806,10 +1791,8 @@ msgid "--print-architecture does not take any argument"
 msgstr "--print-architecture tager ingen parametre"
 
 #: src/enquiry.c:419
-msgid ""
-"--compare-versions takes three arguments: <version> <relation> <version>"
-msgstr ""
-"--compare-versions kræver tre parametre: <version> <relation> <version>"
+msgid "--compare-versions takes three arguments: <version> <relation> <version>"
+msgstr "--compare-versions kræver tre parametre: <version> <relation> <version>"
 
 #: src/enquiry.c:424
 msgid "--compare-versions bad relation"
@@ -1835,8 +1818,7 @@ msgstr ""
 " %s\n"
 
 #: src/errors.c:81
-msgid ""
-"dpkg: failed to allocate memory for new entry in list of failed packages."
+msgid "dpkg: failed to allocate memory for new entry in list of failed packages."
 msgstr ""
 "dpkg: kunne ikke frigøre hukommelse til ny indgang i listen over mislykkede "
 "pakker."
@@ -1861,8 +1843,7 @@ msgstr "Pakken %s var tilbageholdt, behandler den alligevel, efter dit ønske\n"
 
 #: src/errors.c:116
 #, c-format
-msgid ""
-"Package %s is on hold, not touching it.  Use --force-hold to override.\n"
+msgid "Package %s is on hold, not touching it.  Use --force-hold to override.\n"
 msgstr ""
 "Pakken %s er tilbageholdt, rører den ikke.  Brug --force-hold for at "
 "gennemtvinge.\n"
@@ -2176,7 +2157,7 @@ msgstr ""
 "Se %s --licence for detaljer vedrørende ophavsret og licens.\n"
 
 #: src/main.c:57
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Usage: %s [<option> ...] <command>\n"
 "\n"
@@ -2258,28 +2239,29 @@ msgstr ""
 "  -P|--purge        <pakkenavn> ... | -a|--pending\n"
 "  --get-selections [<mønster> ...]    send liste over valgene til standard-"
 "ud\n"
-"  --set-selections                    angiv pakkevalgene fra standard-ind\n"
+"  --set-selections                    angiv pakkevalgene fra standard-ind.\n"
+"  --clear-selections                  Fravælg alle ikke-essentielle pakker.\n"
 "  --update-avail <Packages-fil>       erstat information om tilgængelige "
-"pakker\n"
-"  --merge-avail <Packages-fil>        flet med information fra fil\n"
+"pakker.\n"
+"  --merge-avail <Packages-fil>        flet med information fra fil.\n"
 "  --clear-avail                       slet eksisterende "
-"tilgængeligehedsinformation\n"
+"tilgængeligehedsinformation.\n"
 "  --forget-old-unavail                glem ikke-installerede, ikke-"
-"tilgængelige pakker\n"
-"  -s|--status <pakkenavn> ...         vis detaljer om pakkestatus\n"
-"  -p|--print-avail <pakkenavn> ...    vis tilgængelig version\n"
-"  -L|--listfiles <pakkenavn> ...      nævn de filer, der 'ejes' af pakke(r)\n"
-"  -l|--list [<mønster> ...]           vis sammenfattende pakkeliste\n"
-"  -S|--search <mønster> ...           find pakke(r), der 'ejer' file(r)\n"
-"  -C|--audit                          tjek for ødelagte pakke(r)\n"
-"  --print-architecture                vis målarkitektur (benytter GCC)\n"
+"tilgængelige pakker.\n"
+"  -s|--status <pakkenavn> ...         vis detaljer om pakkestatus.\n"
+"  -p|--print-avail <pakkenavn> ...    vis tilgængelig version.\n"
+"  -L|--listfiles <pakkenavn> ...      nævn de filer, der 'ejes' af pakke(r).\n"
+"  -l|--list [<mønster> ...]           vis sammenfattende pakkeliste.\n"
+"  -S|--search <mønster> ...           find pakke(r), der 'ejer' file(r).\n"
+"  -C|--audit                          tjek for ødelagte pakke(r).\n"
+"  --print-architecture                vis målarkitektur (benytter GCC).\n"
 "  --compare-versions <a> <rel> <b>    sammenlign versionsnumre - se "
-"nedenfor\n"
-"  --help                              vis denne hjælp\n"
-"  --version                           vis versionsnummer\n"
+"nedenfor.\n"
+"  --help                              vis denne hjælp.\n"
+"  --version                           vis versionsnummer.\n"
 "  --force-help | -Dh|--debug=help     hjælp til gennemtvingning hhv. "
-"fejlsporing\n"
-"  --license | --licence               vis ophavrettigheds- og licensforhold\n"
+"fejlsporing.\n"
+"  --license | --licence               vis ophavrettigheds- og licensforhold.\n"
 "\n"
 "Brug dpkg -b|--build|-c|--contents|-e|--control|-I|--info|-f|--field|\n"
 " -x|--extract|-X|--vextract|--fsys-tarfile  på arkiver (skriv %s --help.)\n"
@@ -2288,32 +2270,32 @@ msgstr ""
 "  --assert-working-epoch | --assert-long-filenames | --assert-multi-conrep\n"
 "\n"
 "Tilvalg:\n"
-"  --admindir=<mappe>     Benyt <mappe> i stedet for %s\n"
+"  --admindir=<mappe>     Benyt <mappe> i stedet for %s.\n"
 "  --root=<mappe>           Installér på alternativt system med filrod "
-"andetsteds\n"
+"andetsteds.\n"
 "  --instdir=<mappe>        Skift installationsrod uden at skifte "
-"administrationsmappe\n"
+"administrationsmappe.\n"
 "  -O|--selected-only         Spring over pakker, der ikke er udpeget for "
-"installation/opgradering\n"
+"installation/opgradering.\n"
 "  -E|--skip-same-version     Spring over pakker, hvis version i forvejen er "
-"installeret\n"
+"installeret.\n"
 "  -G|--refuse-downgrade      Spring over pakker med tidligere version ned "
-"den installerede\n"
+"den installerede.\n"
 "  -B|--auto-deconfigure      Installér selvom det skulle ødelægge andre "
-"pakker\n"
-"  --no-debsig                Forsøg ikke at verificere pakkesignaturer\n"
+"pakker.\n"
+"  --no-debsig                Forsøg ikke at verificere pakkesignaturer.\n"
 "  --no-act|--dry-run|--simulate\n"
 "                             Vis kun, hvad der ville ske - uden at gøre det\n"
 "  -D|--debug=<oktal>         Aktivér aflusning - se -Dhelp eller --"
-"debug=help\n"
+"debug=help.\n"
 "  --status-fd <n>            Send statusændringsopdateringer til "
-"fildeskriptor <n>\n"
+"fildeskriptor <n>.\n"
 "  --log=<filnavn>            Log statusændringer og handlinger til "
-"<filnavn>\n"
-"  --ignore-depends=<pakke>,...   Ignorér afhængigheder, er vedrører <pakke>\n"
-"  --force-...                    Gennemtving - se --force-help\n"
-"  --no-force-...|--refuse-...    Stop, når problemer opstår\n"
-"  --abort-after <n>              Afbryd efter  <n> fejl\n"
+"<filnavn>.\n"
+"  --ignore-depends=<pakke>,...   Ignorér afhængigheder, er vedrører <pakke>.\n"
+"  --force-...                    Gennemtving - se --force-help.\n"
+"  --no-force-...|--refuse-...    Stop, når problemer opstår.\n"
+"  --abort-after <n>              Afbryd efter  <n> fejl.\n"
 "\n"
 "Sammenligningsoperatorer til --compare-versions er:\n"
 " lt le eq ne ge gt       (betragt tom version som tidligere end andre "
@@ -2418,7 +2400,7 @@ msgid "invalid integer for --%s: `%.250s'"
 msgstr "ugyldigt heltal for --%s: '%.250s'"
 
 #: src/main.c:296
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "%s forcing options - control behaviour when problems found:\n"
 "  warn but continue:  --force-<thing>,<thing>,...\n"
@@ -2461,8 +2443,6 @@ msgstr ""
 "  stop med fejl:      --refuse-<ting>,<ting>,... | --no-force-<ting>,...\n"
 " Gennemtving ting:\n"
 "  all                    Sæt alle gennemtvingningstilvalg\n"
-"  auto-select [*]        Vælg/fravælg pakker for at installere "
-"(afinstallere) dem\n"
 "  downgrade [*]          Erstat en pakke med en tidligere version\n"
 "  configure-any          Konfigurér enhver pakke, der kan hjælpe denne\n"
 "  hold                   Håndtér genstridige pakker selvom de holdes "
@@ -2504,9 +2484,9 @@ msgid "unknown force/refuse option `%.*s'"
 msgstr "ukendt gennemtvingnings/afvisnings-tilvalg '%.*s'"
 
 #: src/main.c:346
-#, fuzzy, c-format
+#, c-format
 msgid "Warning: obsolete force/refuse option `%s'\n"
-msgstr "Advarsel: forældet tilvalg '--%s'\n"
+msgstr "Advarsel: forældet gennemtvangs/afvisnings-tilvalg '--%s'\n"
 
 #: src/main.c:469 src/main.c:479 src/main.c:487
 msgid "couldn't malloc in execbackend"
@@ -2562,8 +2542,7 @@ msgstr "--%s kræver mindst ét pakkenavn som parameter"
 msgid ""
 "you must specify packages by their own names, not by quoting the names of "
 "the files they come in"
-msgstr ""
-"du skal angive pakker ved deres egne navne, ikke ved de filnavne, de ligger i"
+msgstr "du skal angive pakker ved deres egne navne, ikke ved de filnavne, de ligger i"
 
 #: src/packages.c:150
 #, c-format
@@ -2627,8 +2606,7 @@ msgstr "kunne ikke sikre, at '%.250s' ikke eksisteret"
 
 #: src/processarc.c:117
 msgid "failed to exec dpkg-split to see if it's part of a multiparter"
-msgstr ""
-"kunne ikke eksekvere 'dpkg-split' for at se om den er en del af multiparter"
+msgstr "kunne ikke eksekvere 'dpkg-split' for at se om den er en del af multiparter"
 
 #: src/processarc.c:120
 msgid "wait for dpkg-split failed"
@@ -2716,8 +2694,7 @@ msgstr "Udpakker %s (fra %s)...\n"
 #: src/processarc.c:311
 #, c-format
 msgid "name of conffile (starting `%.250s') is too long (>%d characters)"
-msgstr ""
-"navnet på konfigurationsfilen (starter med '%.250s') er for langt (>%d tegn)"
+msgstr "navnet på konfigurationsfilen (starter med '%.250s') er for langt (>%d tegn)"
 
 #: src/processarc.c:364
 #, c-format
@@ -2840,8 +2817,7 @@ msgstr "pakkekontrolinformation indeholdt mappen '%.250s'"
 #: src/processarc.c:782
 #, c-format
 msgid "package control info rmdir of `%.250s' didn't say not a dir"
-msgstr ""
-"pakkekontrolinformation 'rmdir' af '%.250s' påstod, det ikke er en mappe"
+msgstr "pakkekontrolinformation 'rmdir' af '%.250s' påstod, det ikke er en mappe"
 
 #: src/processarc.c:788
 #, c-format
@@ -2856,8 +2832,7 @@ msgstr "kunne ikke installere ny informationsfil '%.250s' som '%.250s'"
 #: src/processarc.c:952
 #, c-format
 msgid "(Noting disappearance of %s, which has been completely replaced.)\n"
-msgstr ""
-"(Bemærker forsvindingen af %s, der er blevet fuldstændigt erstattet.)\n"
+msgstr "(Bemærker forsvindingen af %s, der er blevet fuldstændigt erstattet.)\n"
 
 #: src/processarc.c:988
 #, c-format
@@ -2923,8 +2898,7 @@ msgstr "dpkg: %s ikke fundet.\n"
 #: src/query.c:341
 #, c-format
 msgid "Package `%s' is not installed and no info is available.\n"
-msgstr ""
-"Pakken '%s' er ikke installeret og der er ingen tilgængelig information.\n"
+msgstr "Pakken '%s' er ikke installeret og der er ingen tilgængelig information.\n"
 
 #: src/query.c:350
 #, c-format
@@ -3045,8 +3019,7 @@ msgstr ""
 
 #: src/remove.c:92
 #, c-format
-msgid ""
-"dpkg - warning: ignoring request to remove %.250s which isn't installed.\n"
+msgid "dpkg - warning: ignoring request to remove %.250s which isn't installed.\n"
 msgstr ""
 "dpkg - advarsel: ignorerer ønsket om at afinstallere %.250s, som ikke er "
 "installeret.\n"
@@ -3218,9 +3191,8 @@ msgid "read error on standard input"
 msgstr "læsefejl fra standard-inddata"
 
 #: src/select.c:154
-#, fuzzy
 msgid "--clear-selections does not take any argument"
-msgstr "--set-selections tager ingen parametre"
+msgstr "--clear-selections tager ingen parametre"
 
 #: src/update.c:44
 #, c-format
@@ -3238,8 +3210,7 @@ msgstr "kunne ikke tilgå dpkg's statusområde for rå tilgængelighedsopdatering"
 
 #: src/update.c:59
 msgid "bulk available update requires write access to dpkg status area"
-msgstr ""
-"rå tilgængelighedsopdatering kræve skriveadgang til dpkg's statusområde"
+msgstr "rå tilgængelighedsopdatering kræve skriveadgang til dpkg's statusområde"
 
 #: src/update.c:66
 #, c-format
@@ -3318,8 +3289,7 @@ msgstr "dpkg-deb: opbygger pakken '%s' i '%s'.\n"
 #: dpkg-deb/build.c:249
 #, c-format
 msgid "control directory has bad permissions %03lo (must be >=0755 and <=0775)"
-msgstr ""
-"kontrolmappen har forkerte rettigheder %03lo (skal være >=0755 og <=0775)"
+msgstr "kontrolmappen har forkerte rettigheder %03lo (skal være >=0755 og <=0775)"
 
 #: dpkg-deb/build.c:260
 #, c-format
@@ -3348,8 +3318,7 @@ msgstr "tom streng fra 'fgets' under læsning af konfigurationsfiler"
 
 #: dpkg-deb/build.c:278
 #, c-format
-msgid ""
-"warning, conffile name `%.50s...' is too long, or missing final newline\n"
+msgid "warning, conffile name `%.50s...' is too long, or missing final newline\n"
 msgstr ""
 "advarsel, konfigurationsfilnavn '%.50s...' er for langt, eller mangler "
 "afsluttende linjeskift\n"
@@ -3899,8 +3868,7 @@ msgstr "filen '%.250s' is ødelagt - nuller i informationsafsnittet"
 #: dpkg-split/info.c:116
 #, c-format
 msgid "file `%.250s' is format version `%.250s' - you need a newer dpkg-split"
-msgstr ""
-"filen '%.250s' har formatversion '%.250s' - du behøver en nyere dpkg-split"
+msgstr "filen '%.250s' har formatversion '%.250s' - du behøver en nyere dpkg-split"
 
 #: dpkg-split/info.c:124
 #, c-format
@@ -3932,8 +3900,7 @@ msgstr "filen '%.250s' is ødelagt - andet medlem er ikke datamedlem"
 #: dpkg-split/info.c:153
 #, c-format
 msgid "file `%.250s' is corrupt - wrong number of parts for quoted sizes"
-msgstr ""
-"filen '%.250s' is ødelagt - forkert antal dele for de oplyste størrelser"
+msgstr "filen '%.250s' is ødelagt - forkert antal dele for de oplyste størrelser"
 
 #: dpkg-split/info.c:157
 #, c-format
@@ -4021,8 +3988,7 @@ msgstr "filerne '%.250s' og '%.250s' er ikke dele af samme fil"
 #: dpkg-split/join.c:89
 #, c-format
 msgid "there are several versions of part %d - at least `%.250s' and `%.250s'"
-msgstr ""
-"der er flere versioner af del %d - i hvert tilfælde '%.250s' og '%.250s'"
+msgstr "der er flere versioner af del %d - i hvert tilfælde '%.250s' og '%.250s'"
 
 #: dpkg-split/join.c:102
 msgid "--join requires one or more part file arguments"
@@ -4252,3 +4218,4 @@ msgstr "kildefil '%.250s' ikke en almindelig fil"
 #: dpkg-split/split.c:70
 msgid "unable to exec mksplit"
 msgstr "kunne ikke udføre 'mksplit'"
+
