[l10n] Updated Czech translation of dpkg

--- a/po/cs.po
+++ b/po/cs.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-04-10 06:33+0300\n"
-"PO-Revision-Date: 2006-03-05 18:15+0100\n"
+"PO-Revision-Date: 2006-04-17 16:04+0200\n"
 "Last-Translator: Miroslav Kure <kurem@debian.cz>\n"
 "Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2163,7 +2163,7 @@ msgstr ""
 "Více informací získáte použitím %s --license.\n"
 
 #: src/main.c:57
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Usage: %s [<option> ...] <command>\n"
 "\n"
@@ -2204,7 +2204,7 @@ msgid ""
 "Options:\n"
 "  --admindir=<directory>     Use <directory> instead of %s.\n"
 "  --root=<directory>         Install on alternative system rooted "
-"elsewhere.\n"
+"elsewhe1re.\n"
 "  --instdir=<directory>      Change inst'n root without changing admin dir.\n"
 "  -O|--selected-only         Skip packages not selected for install/"
 "upgrade.\n"
@@ -2236,7 +2236,8 @@ msgid ""
 msgstr ""
 "Použití: %s [<volba> ...] <příkaz>\n"
 "\n"
-"Příkaz:  -i|--install      <.deb soubor> ... | -R|--recursive <adr> ...\n"
+"Příkazy:\n"
+"  -i|--install      <.deb soubor> ... | -R|--recursive <adr> ...\n"
 "  --unpack          <.deb soubor> ... | -R|--recursive <adr> ...\n"
 "  -A|--record-avail <.deb soubor> ... | -R|--recursive <adr> ...\n"
 "  --configure       <jméno balíku> ... | -a|--pending\n"
@@ -2244,6 +2245,7 @@ msgstr ""
 "  -P|--purge        <jméno balíku> ... | -a|--pending\n"
 "  --get-selections [<vzor> ...]      vypíše vybrané balíky na stdout\n"
 "  --set-selections                   nastaví vybrané balíky ze stdin\n"
+"  --clear-selections                 odznačí všechny balíky krom nezbytných\n"
 "  --update-avail <soubor Packages>   nahradí informace o dostupných "
 "balících\n"
 "  --merge-avail <soubor Packages>    sloučí informace o dostupných balících\n"
@@ -2265,14 +2267,14 @@ msgstr ""
 "  --license | --licence              vypíše licenční podmínky\n"
 "\n"
 "Použijte dpkg -b|--build|-c|--contents|-e|--control|-I|--info|-f|--field|\n"
-" -x|--extract|-X|--vextract|--fsys-tarfile  na archivy (napište %s --help.)\n"
+" -x|--extract|-X|--vextract|--fsys-tarfile  na archivy (napište %s --help).\n"
 "\n"
 "Pro vnitřní potřebu: dpkg --assert-support-predepends | --predep-package |\n"
 "  --assert-working-epoch | --assert-long-filenames | --assert-multi-conrep\n"
 "\n"
 "Volby:\n"
 "  --admindir=<adresář>       Použije <adresář> místo %s\n"
-"  --root=<adresář>           Nainstaluje do systému s jiným kořenovým "
+"  --root=<adresář>           Instaluje do systému s jiným kořenovým "
 "adresářem\n"
 "  --instdir=<adresář>        Změní instalační kořen bez změny admindir\n"
 "  -O|--selected-only         Přeskočí balíky, které nejsou vybrány pro "
@@ -2395,7 +2397,7 @@ msgid "invalid integer for --%s: `%.250s'"
 msgstr "neplatné číslo pro --%s: `%.250s'"
 
 #: src/main.c:296
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "%s forcing options - control behaviour when problems found:\n"
 "  warn but continue:  --force-<thing>,<thing>,...\n"
@@ -2437,18 +2439,17 @@ msgstr ""
 "  varuje, ale pokračuje:  --force-<co>,<co>,...\n"
 "  zastaví s chybou:       --refuse-<co>,<co>,... | --no-force-<co>,...\n"
 " Donucovací akce:\n"
-"  all                      Nastaví všechny donucovací volby\n"
-"  auto-select [*]          (Od)vybere balíky k nainstalování (odstranění)\n"
+"  all [!]                  Nastaví všechny donucovací volby\n"
 "  downgrade [*]            Nahradí balík starší verzí\n"
 "  configure-any            Nakonfiguruje všechny balíky, které mohou tomuto\n"
 "                           balíku pomoci\n"
-"  hold                     Zpracuje balíky, i když jsou `hold'\n"
+"  hold                     Zpracuje balíky, i když jsou podrženy\n"
 "  bad-path                 v PATH chybí důležité programy, což způsobuje\n"
 "                           problémy\n"
 "  not-root                 Zkusí (od|na)instalovat balík, i když není root\n"
 "  overwrite                Přepisuje soubory patřící jinému balíku\n"
 "  overwrite-diverted       Přepíše odsunuté soubory normální verzí\n"
-"  bad-verify               Nainstaluj balík, i když selže kontrola "
+"  bad-verify               Nainstaluje balík, i když selže kontrola "
 "autenticity\n"
 "  depends-version [!]      Změní problémy se závislostmi verzí na varování\n"
 "  depends [!]              Změní všechny problémy se závislostmi na "
@@ -2480,9 +2481,9 @@ msgid "unknown force/refuse option `%.*s'"
 msgstr "neznámá force/refuse volba `%.*s'"
 
 #: src/main.c:346
-#, fuzzy, c-format
+#, c-format
 msgid "Warning: obsolete force/refuse option `%s'\n"
-msgstr "Varování: zastaralá volba `--%s'\n"
+msgstr "Varování: zastaralá force/refuse volba `%s'\n"
 
 #: src/main.c:469 src/main.c:479 src/main.c:487
 msgid "couldn't malloc in execbackend"
@@ -3188,9 +3189,8 @@ msgid "read error on standard input"
 msgstr "chyba při čtení ze standardního vstupu"
 
 #: src/select.c:154
-#, fuzzy
 msgid "--clear-selections does not take any argument"
-msgstr "--set-selections musí být zadán bez argumentu"
+msgstr "--clear-selections musí být zadán bez argumentu"
 
 #: src/update.c:44
 #, c-format
