Vietnamese translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ dpkg (1.13.19~) UNRELEASED; urgency=low
   * Swedish (Peter Karlsson).
   * Danish (Claus Hindsgaul). Closes: #362317
   * Czech (Miroslav kure).
+  * Vietnamese  (Clytie Siddall). Closes: #363264
 
   [ Updated dselect Translations ]
   * Romanian (Eddy Petrişor)
