--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-18 Clytie Siddall  <clytie@riverland.net.au>
+
+	* vi.po: Updated to 731t
+
 2006-04-17 Miroslav Kure <kurem@debian.cz>
 
 	* cs.po: Updated to 731t
