Add a missing quote arround the date.

--- a/man/C/install-info.8
+++ b/man/C/install-info.8
@@ -2,7 +2,7 @@
 .\"
 .\" This is free software; see the GNU General Public Licence version 2
 .\" or later for copying conditions.  There is NO warranty.
-.TH install\-info 8 "2006-02-28 "Debian Project" "dpkg utilities"
+.TH install\-info 8 "2006-02-28" "Debian Project" "dpkg utilities"
 .SH NAME
 install\-info - create or update entry in Info directory
 .
