--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-19  Nicolas Francois  <nicolas.francois@centraliens.net>
+
+	* C/install-info.8: Add a missing quote arround the date.
+
 2006-04-16  Nicolas Francois  <nicolas.francois@centraliens.net>
 
 	* C/dpkg-source.1: Document the shlibs.local format.
