Spanish dpkg translation update. (Javier FernÃ¡ndez-Sanguino PeÃ±a). Closes: #357911

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ dpkg (1.13.19~) UNRELEASED; urgency=low
   * Danish (Claus Hindsgaul). Closes: #362317
   * Czech (Miroslav kure).
   * Vietnamese  (Clytie Siddall). Closes: #363264
+  * Spanish (Javier Fernández-Sanguino Peña). Closes: #357911
 
   [ Updated dselect Translations ]
   * Romanian (Eddy Petrişor)
