--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-21  Javier Fernández-Sanguino Peña  <jfs@computer.org>
+
+	* es.po: Updated to 729t.
+
 2006-04-18 Clytie Siddall  <clytie@riverland.net.au>
 
 	* vi.po: Updated to 731t
