Updated dpkg Basque (Piarres Beobide). Closes: #363683, #363679

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,7 @@ dpkg (1.13.19~) UNRELEASED; urgency=low
   * Czech (Miroslav kure).
   * Vietnamese  (Clytie Siddall). Closes: #363264
   * Spanish (Javier Fernández-Sanguino Peña). Closes: #357911
+  * Basque (Piarres Beobide). Closes: #363683, #363679
 
   [ Updated dselect Translations ]
   * Romanian (Eddy Petrişor)
