Changelog police action.

--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,6 +1,6 @@
-2006-04-11  Eddy Petrişor <eddy.petrisor@gmail.com>
+2006-04-11  Eddy Petrişor  <eddy.petrisor@gmail.com>
 
-	* ro.po: Updated to 286t
+	* ro.po: Updated to 286t.
 
 2006-04-10  Guillem Jover  <guillem@debian.org>
 
