Fix strings so that they can be more easily translated. Closes: #134358

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,17 @@
 2006-04-21  Guillem Jover  <guillem@debian.org>
 
+	* src/query.c (enqperpackage): Change dynamically consutructed
+	grammar to proper sentences.
+	* src/packages.c (deppossi_ok_found): Likewise.
+	* src/main.c (commandfd): Do not use digits, use textual numbers.
+	* lib/dbmodify.c (createimptmp): Use proper verb forms.
+	* lib/showcright.c (showcopyright): Remove trailing space from string.
+	* lib/parsehelp.c (illegal_packagename): Clarify what is the last '%s'.
+	* dpkg-deb/extract.c (movecontrolfiles): Likewise.
+	(extracthalf): Do not use abbreviations in the strings.
+
+2006-04-21  Guillem Jover  <guillem@debian.org>
+
 	* src/main.c (printforhelp, setdebug, setforce): Quote each string
 	line instead of escaping its new line at the end.
 
