--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,9 @@ dpkg (1.13.19~) UNRELEASED; urgency=low
   * Generate the Russian man pages in the KOI8-R charset. Closes: #361987
   * Document the shlibs.local format in dpkg-source(1). CLoses: #316485
 
+  [ Guillem Jover ]
+  * Fix strings so that they can be more easily translated. Closes: #134358
+
  -- Bart Cornelis (cobaco) <cobaco@linux.be>  Thu, 13 Apr 2006 12:51:15 +0200
 
 dpkg (1.13.18) unstable; urgency=low
