Strip the trailing '/dir' from '--dir-file' option parameter to make it GNU install-info compatible (Clint Adams). Closes: #61640, #67237

--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,8 @@ dpkg (1.13.19~) UNRELEASED; urgency=low
 
   [ Guillem Jover ]
   * Fix strings so that they can be more easily translated. Closes: #134358
+  * Strip the trailing '/dir' from '--dir-file' option parameter to make it
+    GNU install-info compatible (Clint Adams). Closes: #61640, #67237
 
  -- Bart Cornelis (cobaco) <cobaco@linux.be>  Thu, 13 Apr 2006 12:51:15 +0200
 
