--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-04-22  Clint Adams  <schizo@debian.org>
+
+	* scripts/install-info.pl: Strip any trailing '/dir' from the
+	'--dir-file' option parameter, to make it GNU install-info compatible.
+
 2006-04-21  Guillem Jover  <guillem@debian.org>
 
 	* src/query.c (enqperpackage): Change dynamically consutructed
