--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ dpkg (1.13.19~) UNRELEASED; urgency=low
   * Vietnamese  (Clytie Siddall). Closes: #363264
   * Spanish (Javier Fernández-Sanguino Peña). Closes: #357911
   * Basque (Piarres Beobide). Closes: #363683, #363679
+  * Japanese (Kenshi Muto). Closes: #365334
 
   [ Updated dselect Translations ]
   * Romanian (Eddy Petrişor)
@@ -31,7 +32,7 @@ dpkg (1.13.19~) UNRELEASED; urgency=low
   * Strip the trailing '/dir' from '--dir-file' option parameter to make it
     GNU install-info compatible (Clint Adams). Closes: #61640, #67237
 
- -- Bart Cornelis (cobaco) <cobaco@linux.be>  Thu, 13 Apr 2006 12:51:15 +0200
+ -- Christian Perrier <bubulle@debian.org>  Sat, 29 Apr 2006 14:28:55 +0200
 
 dpkg (1.13.18) unstable; urgency=low
 
