--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-29  Kenshi Muto  <kmuto@debian.org>
+
+	* ja.po: Updated to 731t.
+
 2006-04-21  Piarres Beobide  <pi@beobide.net>
 
 	* eu.po: Updated to 731t.
