Fix a typo in the Changelog.

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,7 +5,7 @@
 
 2006-04-21  Guillem Jover  <guillem@debian.org>
 
-	* src/query.c (enqperpackage): Change dynamically consutructed
+	* src/query.c (enqperpackage): Change dynamically constructed
 	grammar to proper sentences.
 	* src/packages.c (deppossi_ok_found): Likewise.
 	* src/main.c (commandfd): Do not use digits, use textual numbers.
