Fix a typo in an error message (unexecpted -> unexpected).

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,7 @@ dpkg (1.13.19~) UNRELEASED; urgency=low
   [ Nicolas Francois ]
   * Generate the Russian man pages in the KOI8-R charset. Closes: #361987
   * Document the shlibs.local format in dpkg-source(1). CLoses: #316485
+  * Fix a typo in an error message. Thanks to Justin Pryzby. Closes: #364539
 
   [ Guillem Jover ]
   * Fix strings so that they can be more easily translated. Closes: #134358
