--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-29  Justin Pryzby <justinpryzby@users.sourceforge.net>
+
+	* src/filesdb.c: Fix a typo (unexecpted -> unexpected).
+
 2006-04-22  Clint Adams  <schizo@debian.org>
 
 	* scripts/install-info.pl: Strip any trailing '/dir' from the
