Add new substvars source:Version, source:Upstream-Version and binary:Version so packages will be able to avoid breaking on binNMUs. Based on a patch by Ken Bloom and Jeroen van Wolffelaar. Closes: #358530

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-05-02  Ken Bloom  <kbloom@gmail.com>,
+            Jeroen van Wolffelaar  <jeroen@wolffelaar.nl>,
+            Guillem Jover  <guillem@debian.org>
+
+	* scripts/controllib.pl (parsechangelog): Add new source:Version,
+	source:Upstream-Version and binary:Version substvars.
+
 2006-04-29  Justin Pryzby <justinpryzby@users.sourceforge.net>
 
 	* src/filesdb.c: Fix a typo (unexecpted -> unexpected).
