--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,9 @@ dpkg (1.13.19~) UNRELEASED; urgency=low
   * Fix strings so that they can be more easily translated. Closes: #134358
   * Strip the trailing '/dir' from '--dir-file' option parameter to make it
     GNU install-info compatible (Clint Adams). Closes: #61640, #67237
+  * Add new substvars source:Version, source:Upstream-Version and
+    binary:Version so packages will be able to avoid breaking on binNMUs.
+    Based on a patch by Ken Bloom and Jeroen van Wolffelaar. Closes: #358530
 
  -- Christian Perrier <bubulle@debian.org>  Sat, 29 Apr 2006 14:28:55 +0200
 
