--- a/man/C/dpkg-source.1
+++ b/man/C/dpkg-source.1
@@ -713,8 +713,20 @@ Additionally, the following standard variables are available:
 The current build architecture (from
 .BR "dpkg \-\-print\-architecture" ).
 .TP
+.B source:Version
+The source package version.
+.TP
+.B source:Upstream\-Version
+The upstream source package version.
+.TP
+.B binary:Version
+The binary package version (which may differ from source:Version in a binNMU
+for example).
+.TP
 .B Source\-Version
-The source package version (from the changelog file).
+The source package version (from the changelog file). This variable is now
+\fBdeprecated\fP as its meaning is different from its function, please use
+the \fBsource:Version\fP or \fBbinary:Version\fP as appropriate.
 .TP
 .B Installed\-Size
 The total size of the package's installed files. This value is copied
