Rename dpkg:UpstreamVersion to dpkg:Upstream-Version. Make dpkg:Version and dpkg:Upstream-Version get the current dpkg versions instead of the ones from the package being built.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-05-02  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-genchanges.pl: Rename dpkg:UpstreamVersion to
+	dpkg:Upstream-Version. Make dpkg:Version and dpkg:Upstream-Version
+	get the current dpkg versions instead of the package being built.
+	* scripts/dpkg-gencontrol.pl: Likewise.
+
 2006-05-02  Ken Bloom  <kbloom@gmail.com>,
             Jeroen van Wolffelaar  <jeroen@wolffelaar.nl>,
             Guillem Jover  <guillem@debian.org>
