--- a/debian/changelog
+++ b/debian/changelog
@@ -35,6 +35,9 @@ dpkg (1.13.19~) UNRELEASED; urgency=low
   * Add new substvars source:Version, source:Upstream-Version and
     binary:Version so packages will be able to avoid breaking on binNMUs.
     Based on a patch by Ken Bloom and Jeroen van Wolffelaar. Closes: #358530
+  * Rename dpkg:UpstreamVersion to dpkg:Upstream-Version. Make dpkg:Version
+    and dpkg:Upstream-Version get the current dpkg versions instead of the
+    ones from the package being built.
 
  -- Christian Perrier <bubulle@debian.org>  Sat, 29 Apr 2006 14:28:55 +0200
 
