Standarize start-stop-daemon usage output format.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-05-02  Guillem Jover  <guillem@debian.org>
 
+	* utils/start-stop-daemon.c (do_help): Standarize output format.
+
+2006-05-02  Guillem Jover  <guillem@debian.org>
+
 	* dselect/main.cc (usage): Split string and align so duped strings get
 	merged.
 	* dpkg-deb/main.c (usage): Likewise.
