Sync source with .pot and .po files. (I can feel the translators love already...)

--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,9 @@
+2006-05-03  Guillem Jover  <guillem@debian.org>
+
+	* dselect.pot: Regenerated.
+	* *.po: Merged with dselect.pot. Formerly completed translations
+	become 285t1f3u.
+
 2006-04-11  Eddy Petrişor  <eddy.petrisor@gmail.com>
 
 	* ro.po: Updated to 286t.
