--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2006-05-03  Guillem Jover  <guillem@debian.org>
+
+	* dpkg.pot: Regenerated.
+	* *.po: Merged with dpkg.pot. Formerly complete translations
+	become 703t22f17u.
+
 2006-04-29  Kenshi Muto  <kmuto@debian.org>
 
 	* ja.po: Updated to 731t.
